Content is king! Writing missing pages. * Created slideshow * Fixed a rendering error with athletes profile text wrapping if too long.

--- a/src/sass/_common-styles.scss
+++ b/src/sass/_common-styles.scss
@@ -45,6 +45,9 @@ h3, h4 {
     }
   }
 }
+.large {
+  font-size: 125%;
+}
 
 @media screen and (min-width: $mquery-mobile-width * 1.75) {
   h2 {
